# TukiJuris

./: .dockerignore  .env.example  .env.production.example  .gitignore  .ruff.toml  AUDITORIA-COMPLETA.md  CHANGELOG.md  DEPLOY_GUIDE.md  DESIGN.md  DESIGN_CLIENT.md  DESIGN_PUBLIC.md  LICENSE  Makefile  PLAN-MAESTRO.md  ROADMAP-2026.md  ROADMAP-ESTRUCTURA-FRONTEND.md  ROADMAP-FIXES.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  env-template.txt
.claude/: launch.json
apps/api/: AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.prod  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_baseline.py  002_add_user_sso_fields.py  003_add_refresh_tokens.py  004_add_rbac.py  005_add_roles_permissions.py  006_fix_usage_records_schema.py  007_rename_plan_values.py  008_org_seat_pricing.py  009_backfill_is_admin_from_rbac.py  010_admin_saas_panel_indexes.py  011_add_onboarding_completed.py  012_add_onboarding_completed_server_default.py  012_onboarding_server_default.py  013_webhook_dedupe.py  014_invoices.py  015_trials.py  016_add_password_updated_at.py  017_unique_user_llm_keys.py  018_platform_llm_keys.py  019_reasoning_quota.py  020_indexes_and_sunat_prep.py  021_conversation_case_state.py
apps/api/app/: config.py  main.py  scheduler.py
apps/api/app/agents/: base_agent.py  domain_agents.py  intake_templates.py  orchestrator.py
apps/api/app/api/: deps.py  middleware.py
apps/api/app/config/: __init__.py  plans.py
apps/api/app/core/: access_revocation.py  cache.py  database.py  exception_handlers.py  exceptions.py  monitoring.py  rate_limiter.py  security.py  startup_validation.py  token_denylist.py  validators.py
apps/api/app/jobs/: trial_jobs.py
apps/api/app/models/: __init__.py  api_key.py  conversation.py  document.py  invoice.py  llm_key.py  memory.py  notification.py  organization.py  platform_llm_key.py  refresh_token.py  search.py  subscription.py  tag.py  trial.py  uploaded_document.py  user.py
apps/api/app/rbac/: __init__.py  audit.py  cache.py  constants.py  dependencies.py  models.py  schemas.py  seed.py  service.py
apps/api/scripts/: bootstrap.py  check_coverage.py
apps/api/tests/: conftest.py  test_admin_trials_routes.py  test_api.py  test_auth.py  test_auth_change_password.py  test_billing.py  test_billing_trial_integration.py  test_billing_webhook_invoice_creation.py  test_byok_plan_gate.py  test_conversations.py  test_documents.py  test_feedback.py  test_health.py  test_internal_trials_routes.py  test_invoice_batch_e.py  test_invoice_model.py  test_invoice_routes_admin.py  test_invoice_routes_user.py  test_invoice_service.py  test_llm_key_isolation.py  test_migration_011.py  test_migration_012.py  test_migration_013.py  test_migration_014.py  test_migration_015.py  test_organizations.py  test_payment_providers.py  test_plans_route.py  test_rate_limiting.py  test_scheduler.py  test_startup_validation.py  test_trial_service.py  test_trials_routes.py
sdks/python/: README.md  pyproject.toml
sdks/python/tukijuris/: __init__.py  async_client.py  client.py
(+592 files in other folders)
