[project]
name = "agente-derecho-api"
version = "0.1.0"
description = "API backend for Agente Derecho - Peruvian Legal AI Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Redis
    "redis>=5.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    # AI / LLM
    "litellm>=1.55.0",
    "langgraph>=0.2.60",
    "langchain>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-community>=0.3.12",
    "langchain-openai>=0.2.14",
    # Embeddings & Vector
    "tiktoken>=0.8.0",
    "google-generativeai>=0.8.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.0.0",
    # Config
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.1.0",
    # HTTP
    "httpx>=0.28.0",
    # Utils
    "python-dotenv>=1.0.1",
    # Payments
    "mercadopago>=2.2.0",
    # PDF generation (zero system dependencies, pure Python)
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
# Without this, async fixtures create fresh event loops that don't match the
# session-scoped test loop → asyncpg connections raise
# "got Future attached to a different loop" / "protocol state 3" errors.
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live PostgreSQL + Redis (deselect with -m 'not integration')",
]
