[project]
name = "tukijuris"
version = "0.1.0"
description = "Python SDK for TukiJuris Legal AI API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["legal", "ai", "peru", "law", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://tukijuris.net.pe"
Documentation = "https://tukijuris.net.pe/developer"
Repository = "https://github.com/tukijuris/python-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tukijuris"]
